--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,28 +10,8 @@
         android:smallScreens="true"
         android:anyDensity="true" />
         
-    <application android:icon="@drawable/internet_icon" android:label="@string/app_name">
-        <activity android:name=".MainActivity"
-                  android:label="@string/app_name"
-                  android:theme="@android:style/Theme.Light"
-                  android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        
-        <activity android:name=".ResultActivity"
-                  android:label="@string/app_name"
-                  android:theme="@android:style/Theme.Dialog"
-                  android:screenOrientation="portrait">
-        </activity>
-        
-        <activity android:name=".AboutActivity"
-                  android:label="@string/app_name"
-                  android:theme="@android:style/Theme.Dialog"
-                  android:screenOrientation="portrait">
-        </activity>
+    <application>
+
 
     </application>
     <uses-sdk android:minSdkVersion="3" />
