--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,10 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 19
     buildToolsVersion "25.0.3"
 
     defaultConfig {
-        applicationId "com.kodholken.stunclient"
         minSdkVersion 3
         targetSdkVersion 3
     }
