--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,22 @@
         android:smallScreens="true"
         android:anyDensity="true" />
         
-    <application>
-
+    <application android:label="@string/app_name">
+        <activity android:name=".MainActivity"
+                  android:label="@string/app_name"
+                  android:theme="@android:style/Theme.Light"
+                  android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        
+        <activity android:name=".ResultActivity"
+                  android:label="@string/app_name"
+                  android:theme="@android:style/Theme.Dialog"
+                  android:screenOrientation="portrait">
+        </activity>
 
     </application>
     <uses-sdk android:minSdkVersion="3" />
