--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,8 @@
         android:smallScreens="true"
         android:anyDensity="true" />
         
-    <application android:label="@string/app_name">
+    <application>
         <activity android:name=".MainActivity"
-                  android:label="@string/app_name"
                   android:theme="@android:style/Theme.Light"
                   android:screenOrientation="portrait">
             <intent-filter>
@@ -22,7 +21,6 @@
         </activity>
         
         <activity android:name=".ResultActivity"
-                  android:label="@string/app_name"
                   android:theme="@android:style/Theme.Dialog"
                   android:screenOrientation="portrait">
         </activity>
